fix duplicate route
